[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RAMPART"
version = "0.1.0"
description = "A pytest-native safety testing framework for agentic AI applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-kusto-data>=6.0.3",
    "azure-kusto-ingest>=6.0.3",
    "jsonschema>=4.26.0",
    "msgraph-sdk>=1.55.0",
    "playwright>=1.58.0",
    "pyrit",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
]

[project.entry-points.pytest11]
rampart = "rampart.pytest_plugin.plugin"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "harm(*categories): categorize test by harm type",
    "trial(n=, threshold=): statistical repetition of a test",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",                                    # assert is pytest's API
    "D100", "D101", "D102", "D104", "D107",    # no docstrings needed
    "ANN001", "ANN201", "ANN202", "ANN401",    # no type annotations needed
    "PLR2004",                                 # magic values in assertions are fine
    "ARG001", "ARG002",                        # unused args (fixtures, stubs)
    "PLC0415",                                 # imports inside functions for isolation
    "SLF001",                                  # testing private members is valid
    "TRY003", "EM101", "EM102",                # exception message style
    "BLE001",                                  # catching Exception in tests
    "TRY301",                                  # raise in try blocks
    "S108",                                    # /tmp usage
    "PT017", "PT018",                          # assertion style
    "ASYNC240",                                # pathlib in async tests
    "PERF401", "RUF015", "PTH123",             # micro-optimizations / style
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "Copyright \\(c\\) Microsoft Corporation\\.\\s*\\n.*Licensed under the MIT license"

[tool.ruff.lint.isort]
known-first-party = ["rampart"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
pyrit = { git = "https://github.com/microsoft/PyRIT.git", rev = "main" }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
